--- a/facedetectorapp/src/components/logo/logo.css
+++ b/facedetectorapp/src/components/logo/logo.css
@@ -1,6 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.Tilt {
   background: linear-gradient(86deg, #ff191d 0%,#edd204 100%);
 }
