rank component created

--- a/facedetectorapp/src/index.css
+++ b/facedetectorapp/src/index.css
@@ -4,3 +4,7 @@ body {
   font-family: sans-serif;
   background: linear-gradient(86deg, #ff191d 0%,#edd204 100%);
 }
+
+button {
+  cursor: pointer;
+}
