model can now be changed dynamically through a dropdown menu

--- a/facedetectorapp/src/components/logo/logo.css
+++ b/facedetectorapp/src/components/logo/logo.css
@@ -1,3 +1,3 @@
 .Tilt {
-  background: linear-gradient(86deg, #ff191d 0%,#edd204 100%);
+  background: linear-gradient(to left, #f0f0f0 0%,#96a3d3 100%);
 }
