--- a/facedetectorapp/src/components/imageLinkForm/ImageLinkForm.css
+++ b/facedetectorapp/src/components/imageLinkForm/ImageLinkForm.css
@@ -8,3 +8,36 @@
   background-color:#454545;
   background-size:16px 16px;
 }
+
+.modelDropdown {
+  border: 1px solid grey;
+  width: 200px;
+  height: 40px;
+  padding-top: 10px;
+  margin: 0px auto;
+  border-radius: 5px;
+  color: blue;
+  cursor: pointer;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, .6);
+}
+
+.modelDropdown:hover {
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
+}
+
+.optionClass {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #0000bb;
+  font-size: 16;
+  background-color: white;
+}
+
+.optionClass:first-child {
+  margin-top: 10px;
+}
+
+
+.optionClass:hover {
+  opacity: 0.7;
+}
