--- a/facedetectorapp/src/index.css
+++ b/facedetectorapp/src/index.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
-  background: linear-gradient(86deg, #ff191d 0%,#edd204 100%);
+
+  background: linear-gradient(to left, #f0f0f0 0%,#96a3d3 100%);
 }
 
 button {
