--- a/facedetectorapp/src/index.css
+++ b/facedetectorapp/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Josefin Sans', sans-serif, monospace;
 
   background: linear-gradient(to left, #f0f0f0 0%,#96a3d3 100%);
 }
